[project]
name = "ai-scroll-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepface>=0.0.100",
    "loguru>=0.7.3",
    "opencv-python>=5.0.0.93",
    "pandas>=2.3.3",
    "playwright>=1.61.0",
    "tf-keras>=2.21.0",
]
